letters insert into first row when selected from keyboard

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="word-grid">
 
-      <div class="row">
+      <div class="row first-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -25,7 +25,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row">
+      <div class="row second-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -33,7 +33,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row">
+      <div class="row third-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -41,7 +41,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row">
+      <div class="row fourth-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -49,7 +49,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row">
+      <div class="row fifth-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -57,7 +57,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row">
+      <div class="row sixth-guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -100,11 +100,11 @@
         <div class="key" data-key="B">B</div>
         <div class="key" data-key="N">N</div>
         <div class="key" data-key="M">M</div>
-        <div class="key wide">TEST</div>
+        <div class="key wide" data-key="pop">TEST</div>
       </div>
 
     </div>
   </div>
-
 </body>
+<script src="game.js"></script>
 </html>
