clicking dummy 'try' key shifts guess to next row when enough letters are added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="word-grid">
 
-      <div class="row first-guess">
+      <div class="row first guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -25,7 +25,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row second-guess">
+      <div class="row second guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -33,7 +33,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row third-guess">
+      <div class="row third guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -41,7 +41,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row fourth-guess">
+      <div class="row fourth guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -49,7 +49,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row fifth-guess">
+      <div class="row fifth guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -57,7 +57,7 @@
         <div class="cell"></div>
       </div>
 
-      <div class="row sixth-guess">
+      <div class="row sixth guess">
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -92,7 +92,7 @@
         <div class="key" data-key="L">L</div>
       </div>
       <div class="key-row">
-        <div class="key wide">TEST</div>
+        <div class="key wide" data-key="try">TEST</div>
         <div class="key" data-key="Z">Z</div>
         <div class="key" data-key="X">X</div>
         <div class="key" data-key="C">C</div>
