basic game functionality works now, needs general ux tweaking

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="key" data-key="L">L</div>
       </div>
       <div class="key-row">
-        <div class="key wide" data-key="try">TEST</div>
+        <div class="key wide" data-key="turn">TEST</div>
         <div class="key" data-key="Z">Z</div>
         <div class="key" data-key="X">X</div>
         <div class="key" data-key="C">C</div>
@@ -100,7 +100,7 @@
         <div class="key" data-key="B">B</div>
         <div class="key" data-key="N">N</div>
         <div class="key" data-key="M">M</div>
-        <div class="key wide" data-key="pop">TEST</div>
+        <div class="key wide" data-key="del">TEST</div>
       </div>
 
     </div>
