--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/999a85aa00.js" crossorigin="anonymous"></script>
   <title>Wordln't</title>
 </head>
 <body>
@@ -92,7 +93,7 @@
         <div class="key" data-key="L">L</div>
       </div>
       <div class="key-row">
-        <div class="key wide" data-key="turn">TEST</div>
+        <div class="key wide" data-key="turn"><i class="far fa-check-circle"></i></div>
         <div class="key" data-key="Z">Z</div>
         <div class="key" data-key="X">X</div>
         <div class="key" data-key="C">C</div>
@@ -100,7 +101,7 @@
         <div class="key" data-key="B">B</div>
         <div class="key" data-key="N">N</div>
         <div class="key" data-key="M">M</div>
-        <div class="key wide" data-key="del">TEST</div>
+        <div class="key wide" data-key="del"><i class="far fa-times-circle"></i></div>
       </div>
 
     </div>
