an overlay now appears when the correct word is guessed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
 
   <div class="content">
+    <div class="overlay">
+      <div class="overlay-info">
+
+      </div>
+    </div>
 
     <div class="heading">
       WORDLN'T
