--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-status-bar-style" content="rgba(0, 119, 183, 0.6)">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/999a85aa00.js" crossorigin="anonymous"></script>
   <title>Wordln't</title>
