--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="key" data-key="L">L</div>
       </div>
       <div class="key-row">
-        <div class="key wide" data-key="turn"><i class="far fa-check-circle"></i></div>
+        <div class="key wide" data-key="turn"><i class="far fa-check-circle" data-key="turn"</i></div>
         <div class="key" data-key="Z">Z</div>
         <div class="key" data-key="X">X</div>
         <div class="key" data-key="C">C</div>
@@ -107,7 +107,7 @@
         <div class="key" data-key="B">B</div>
         <div class="key" data-key="N">N</div>
         <div class="key" data-key="M">M</div>
-        <div class="key wide" data-key="del"><i class="far fa-times-circle"></i></div>
+        <div class="key wide" data-key="del"><i class="far fa-times-circle" data-key="del"></i></div>
       </div>
 
     </div>
