typo wrecked keyboard, fixed it

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="key" data-key="L">L</div>
       </div>
       <div class="key-row">
-        <div class="key wide" data-key="turn"><i class="far fa-check-circle" data-key="turn"</i></div>
+        <div class="key wide" data-key="turn"><i class="far fa-check-circle" data-key="turn"></i></div>
         <div class="key" data-key="Z">Z</div>
         <div class="key" data-key="X">X</div>
         <div class="key" data-key="C">C</div>
